* ajustes gerais   - renomeação de "Home" para "Tela Inicial"   - remoção de icones da tela inicial   - padronização de cores de botões   - correção de textos e propriedades   - limpeza de funções duplicadas   - botão "voltar para tela inicial" no topo da tela   - gráficos dispostos em colunas

--- a/python/CRUD-panel.ipynb
+++ b/python/CRUD-panel.ipynb
@@ -105,14 +105,14 @@
     "# Criar uma home direcionando para o crud e para o gráfico\n",
     "\n",
     "import os\n",
-    "from dotenv import load_dotenv\n",
-    "\n",
     "import pandas as pd\n",
     "import psycopg2 as pg\n",
     "import sqlalchemy\n",
-    "from sqlalchemy import create_engine\n",
     "import panel as pn\n",
-    "import matplotlib.pyplot as plt"
+    "import matplotlib.pyplot as plt\n",
+    "\n",
+    "from dotenv import load_dotenv\n",
+    "from sqlalchemy import create_engine\n"
    ]
   },
   {
@@ -214,25 +214,24 @@
     "\n",
     "def create_home_view():\n",
     "    # Create fresh button instances every time\n",
-    "    btn_crud = pn.widgets.Button(name=\"📋 Ir para CRUD\", button_type=\"primary\", width=250)\n",
-    "    btn_graficos = pn.widgets.Button(name=\"📊 Ir para Gráficos\", button_type=\"success\", width=250)\n",
-    "    btn_campanhas = pn.widgets.Button(name=\"📢 Ir para Campanhas\", button_type=\"warning\", width=250)\n",
-    "    btn_doacoes = pn.widgets.Button(name=\"🎁 Ir para Doações\", button_type=\"primary\", width=250)\n",
+    "    btn_usuarios = pn.widgets.Button(name=\"Usuários\", button_type=\"primary\", width=250)    \n",
+    "    btn_campanhas = pn.widgets.Button(name=\"Campanhas\", button_type=\"primary\", width=250)\n",
+    "    btn_doacoes = pn.widgets.Button(name=\"Doações\", button_type=\"primary\", width=250)\n",
+    "    btn_graficos = pn.widgets.Button(name=\"Gráficos\", button_type=\"danger\", width=250)\n",
     "    \n",
     "    # Connect their clicks\n",
-    "    btn_crud.on_click(lambda event: go_to_crud())\n",
-    "    btn_graficos.on_click(lambda event: go_to_graficos())\n",
+    "    btn_usuarios.on_click(lambda event: go_to_usuarios())    \n",
     "    btn_campanhas.on_click(lambda event: go_to_campanhas())\n",
     "    btn_doacoes.on_click(lambda event: go_to_doacoes())\n",
-    "    \n",
+    "    btn_graficos.on_click(lambda event: go_to_graficos())\n",
+    "        \n",
     "    home = pn.Column(\n",
-    "        pn.pane.Markdown(\"## 🏠 Tela Inicial\"),\n",
-    "        pn.pane.Markdown(\"Escolha uma opção abaixo:\"),\n",
-    "        pn.Spacer(height=20),\n",
-    "        btn_crud,\n",
-    "        btn_graficos,\n",
+    "        pn.pane.Markdown(\"## 🏠 Tela Inicial\"),        \n",
+    "        pn.pane.Markdown(\"Escolha uma opção:\", styles={\"font-size\": \"14pt\"}),        \n",
+    "        btn_usuarios,        \n",
     "        btn_campanhas,\n",
     "        btn_doacoes,\n",
+    "        btn_graficos,\n",
     "        align=\"center\",\n",
     "        sizing_mode=\"stretch_width\",\n",
     "        margin=(50,50,50,50)\n",
@@ -256,26 +255,12 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e932c321",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Criação dos botões da Home\n",
-    "btn_go_crud = pn.widgets.Button(name=\"📋 Ir para CRUD\", button_type=\"primary\", width=250)\n",
-    "btn_go_graficos = pn.widgets.Button(name=\"📊 Ir para Gráficos\", button_type=\"success\", width=250)\n",
-    "btn_go_campanhas = pn.widgets.Button(name=\"📢 Ir para Campanhas\", button_type=\"warning\", width=250)\n",
-    "btn_go_doacoes = pn.widgets.Button(name=\"🎁 Ir para Doações\", button_type=\"primary\", width=250)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
    "id": "17f3f9a0",
    "metadata": {},
    "outputs": [],
    "source": [
     "def create_btn_voltar():\n",
-    "    btn_voltar_home = pn.widgets.Button(name='⬅ Voltar para Home', button_type='default')\n",
+    "    btn_voltar_home = pn.widgets.Button(name='⬅ Voltar para Tela Inicial', button_type='default')\n",
     "    \n",
     "    def voltar_action(event):\n",
     "        main_area.clear()\n",
@@ -377,13 +362,18 @@
    "outputs": [],
    "source": [
     "# Botões de ações CRUD\n",
-    "buttonConsultar = pn.widgets.Button(name='Consultar', button_type='primary')\n",
-    "buttonInserir = pn.widgets.Button(name='Inserir', button_type='success')\n",
-    "buttonExcluir = pn.widgets.Button(name='Excluir', button_type='danger')\n",
-    "buttonAtualizar = pn.widgets.Button(name='Atualizar', button_type='warning')\n",
+    "btn_consultar = pn.widgets.Button(name='Consultar', button_type='primary')\n",
+    "btn_inserir = pn.widgets.Button(name='Inserir', button_type='success')\n",
+    "btn_excluir = pn.widgets.Button(name='Excluir', button_type='danger')\n",
+    "btn_atualizar = pn.widgets.Button(name='Atualizar', button_type='warning')\n",
+    "\n",
+    "btn_consultar.margin = (0, 1, 0, 10)\n",
+    "btn_inserir.margin = (0, 1, 0, 0)\n",
+    "btn_atualizar.margin = (0, 1, 0, 0)\n",
+    "btn_excluir.margin = (0, 1, 0, 0)\n",
     "\n",
     "# Botão para voltar à Home (na tela CRUD)\n",
-    "buttonVoltar = pn.widgets.Button(name='⬅ Voltar para Home', button_type='default')\n"
+    "buttonVoltar = pn.widgets.Button(name='⬅ Voltar para Tela Inicial', button_type='default')\n"
    ]
   },
   {
@@ -594,10 +584,10 @@
     "def create_interactive_table():\n",
     "    return pn.bind(\n",
     "        table_creator,\n",
-    "        buttonConsultar,\n",
-    "        buttonInserir,\n",
-    "        buttonAtualizar,\n",
-    "        buttonExcluir,\n",
+    "        btn_consultar,\n",
+    "        btn_inserir,\n",
+    "        btn_atualizar,\n",
+    "        btn_excluir,\n",
     "        form_widgets\n",
     "    )\n"
    ]
@@ -609,13 +599,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def create_crud_view(w):\n",
+    "def create_user_view(w):\n",
     "    \"\"\"\n",
     "    Cria a tela do CRUD com layout bonito.\n",
     "    \"\"\"\n",
     "    crud_layout = pn.Row(\n",
     "        pn.Column(\n",
     "            pn.pane.Markdown(\"### 👥 Gerenciador de Usuários\"),\n",
+    "            create_btn_voltar(),\n",
     "            w[\"tipo_pessoa\"],\n",
     "            pn.Spacer(height=10),\n",
     "            w[\"nome\"],\n",
@@ -633,8 +624,7 @@
     "            w[\"estado\"],\n",
     "            w[\"cep\"],\n",
     "            pn.Spacer(height=15),\n",
-    "            pn.Row(buttonConsultar, buttonInserir),\n",
-    "            pn.Row(buttonAtualizar, buttonExcluir),\n",
+    "            pn.Row(btn_consultar, btn_inserir, btn_atualizar, btn_excluir),\n",
     "            pn.Spacer(height=10),\n",
     "            create_btn_voltar(),\n",
     "            sizing_mode='stretch_width',\n",
@@ -642,20 +632,11 @@
     "        ),\n",
     "        pn.Column(create_interactive_table(), sizing_mode='stretch_both')\n",
     "    )\n",
-    "    \n",
-    "    return crud_layout\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "ced10e74",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def go_to_crud():\n",
+    "    return crud_layout\n",
+    "\n",
+    "def go_to_usuarios():\n",
     "    main_area.clear()\n",
-    "    main_area.append(create_crud_view(form_widgets))"
+    "    main_area.append(create_user_view(form_widgets))"
    ]
   },
   {
@@ -808,10 +789,9 @@
     "def create_graficos_view():\n",
     "    graficos_layout = pn.Column(\n",
     "        pn.pane.Markdown(\"### 📊 Análise do Sistema de Doações\"),\n",
-    "        pn.Row(\n",
-    "            pn.Column(grafico_total_usuarios(), sizing_mode='stretch_width'),\n",
-    "            pn.Column(grafico_distribuicao_por_tipo(), sizing_mode='stretch_width')\n",
-    "        ),\n",
+    "        create_btn_voltar(),\n",
+    "        pn.Column(grafico_total_usuarios(), sizing_mode='stretch_width'),\n",
+    "        pn.Column(grafico_distribuicao_por_tipo(), sizing_mode='stretch_width'),\n",
     "        pn.Column(grafico_instituicoes(), sizing_mode='stretch_width'),\n",
     "        pn.Column(grafico_doacoes_por_campanha(), sizing_mode='stretch_width'),\n",
     "        create_btn_voltar(),\n",
@@ -819,16 +799,8 @@
     "        margin=(20,20,20,20)\n",
     "    )\n",
     "    \n",
-    "    return graficos_layout\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "d1f1a1cb",
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "    return graficos_layout\n",
+    "\n",
     "def go_to_graficos():\n",
     "    main_area.clear()\n",
     "    main_area.append(create_graficos_view())"
@@ -890,10 +862,10 @@
     ")\n",
     "\n",
     "# Botões de ações para campanhas\n",
-    "btn_consultar_campanhas = pn.widgets.Button(name='Consultar Campanha', button_type='primary')\n",
-    "btn_criar_campanha = pn.widgets.Button(name='Criar Campanha', button_type='success')\n",
-    "btn_atualizar_campanha = pn.widgets.Button(name='Atualizar Campanha', button_type='warning')\n",
-    "btn_excluir_campanha = pn.widgets.Button(name='Excluir Campanha', button_type='danger')\n",
+    "btn_consultar = pn.widgets.Button(name='Consultar', button_type='primary')\n",
+    "btn_inserir = pn.widgets.Button(name='Inserir', button_type='success')\n",
+    "btn_atualizar = pn.widgets.Button(name='Atualizar', button_type='warning')\n",
+    "btn_excluir = pn.widgets.Button(name='Excluir', button_type='danger')\n",
     "btn_ativar_inativar = pn.widgets.Button(name='Ativar/Inativar Campanha', button_type='danger')\n",
     "\n",
     "def on_consultar_campanhas(event):\n",
@@ -1202,30 +1174,30 @@
     "            cursor.close()\n",
     "        pn.state.notifications.error(f'Erro ao alterar status: {str(e)}')\n",
     "\n",
-    "btn_consultar_campanhas.on_click(on_consultar_campanhas)\n",
-    "btn_criar_campanha.on_click(on_criar_campanha)\n",
-    "btn_atualizar_campanha.on_click(on_atualizar_campanha)\n",
-    "btn_excluir_campanha.on_click(on_excluir_campanha)\n",
+    "btn_consultar.on_click(on_consultar_campanhas)\n",
+    "btn_inserir.on_click(on_criar_campanha)\n",
+    "btn_atualizar.on_click(on_atualizar_campanha)\n",
+    "btn_excluir.on_click(on_excluir_campanha)\n",
     "btn_ativar_inativar.on_click(on_ativar_inativar)\n",
     "\n",
     "def create_campanhas_view():\n",
     "    \"\"\"Cria a tela de campanhas\"\"\"\n",
     "    campanhas_layout = pn.Column(\n",
     "        pn.pane.Markdown(\"### 📢 Gerenciador de Campanhas\"),\n",
+    "        create_btn_voltar(),\n",
     "        pn.pane.Markdown(\"**Preencha os dados para gerenciar campanhas**\"),\n",
     "        instituicoes_select,\n",
     "        nome_campanha,\n",
     "        data_inicio,\n",
     "        data_fim,\n",
     "        status_campanha,\n",
-    "        pn.Row(btn_consultar_campanhas, btn_criar_campanha),\n",
-    "        pn.Row(btn_atualizar_campanha, btn_excluir_campanha),\n",
+    "        pn.Row(btn_consultar, btn_inserir, btn_atualizar, btn_excluir),\n",
     "        pn.Row(btn_ativar_inativar),\n",
-    "        pn.Spacer(height=20),\n",
-    "        pn.bind(on_consultar_campanhas, btn_consultar_campanhas),\n",
+    "        pn.Spacer(height=1),\n",
+    "        pn.bind(on_consultar_campanhas, btn_consultar),\n",
     "        create_btn_voltar(),\n",
     "        sizing_mode='stretch_width',\n",
-    "        margin=(20, 20, 20, 20)\n",
+    "        margin=(20, 20, 20, 20),\n",
     "    )\n",
     "    return campanhas_layout\n",
     "\n",
@@ -1246,9 +1218,9 @@
     "main_area.append(create_home_view())\n",
     "\n",
     "pn.Column(\n",
-    "    pn.pane.Markdown(\"# 🎁 Sistema de Doações\"),\n",
+    "    pn.pane.Markdown(\"# Sistema de Doações\", styles={\"margin\": \"50px 0px 0px 50px\"}),\n",
     "    main_area\n",
-    ").servable()"
+    ").servable()\n"
    ]
   },
   {
@@ -1257,13 +1229,7 @@
    "id": "1ce79858",
    "metadata": {},
    "outputs": [],
-   "source": [
-    "# Conecta os botões da Home às funções de navegação\n",
-    "btn_go_crud.on_click(lambda event: go_to_crud())\n",
-    "btn_go_graficos.on_click(lambda event: go_to_graficos())\n",
-    "btn_go_campanhas.on_click(lambda event: go_to_campanhas())\n",
-    "btn_go_doacoes.on_click(lambda event: go_to_doacoes())"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
@@ -1330,10 +1296,10 @@
     ")\n",
     "\n",
     "# Botões de ações para doações\n",
-    "btn_consultar_doacoes = pn.widgets.Button(name='Consultar', button_type='primary')\n",
-    "btn_registrar_doacao = pn.widgets.Button(name='Registrar Doação', button_type='success')\n",
-    "btn_atualizar_doacao = pn.widgets.Button(name='Atualizar', button_type='warning')\n",
-    "btn_excluir_doacao = pn.widgets.Button(name='Excluir', button_type='danger')\n",
+    "btn_consultar = pn.widgets.Button(name='Consultar', button_type='primary')\n",
+    "btn_registrar = pn.widgets.Button(name='Inserir', button_type='success')\n",
+    "btn_atualizar = pn.widgets.Button(name='Atualizar', button_type='warning')\n",
+    "btn_excluir = pn.widgets.Button(name='Excluir', button_type='danger')\n",
     "\n",
     "def on_consultar_doacoes(event):\n",
     "    \"\"\"Consulta todas as doações registradas\"\"\"\n",
@@ -1482,23 +1448,23 @@
     "            cursor.close()\n",
     "        pn.state.notifications.error(f'Erro ao excluir: {str(e)}')\n",
     "\n",
-    "btn_consultar_doacoes.on_click(on_consultar_doacoes)\n",
-    "btn_registrar_doacao.on_click(on_registrar_doacao)\n",
-    "btn_atualizar_doacao.on_click(on_atualizar_doacao)\n",
-    "btn_excluir_doacao.on_click(on_excluir_doacao)\n",
+    "btn_consultar.on_click(on_consultar_doacoes)\n",
+    "btn_inserir.on_click(on_registrar_doacao)\n",
+    "btn_atualizar.on_click(on_atualizar_doacao)\n",
+    "btn_excluir.on_click(on_excluir_doacao)\n",
     "\n",
     "def create_doacoes_view():\n",
     "    \"\"\"Cria a tela de doações\"\"\"\n",
     "    doacoes_layout = pn.Column(\n",
     "        pn.pane.Markdown(\"### 🎁 Registrar Doação\"),\n",
+    "        create_btn_voltar(),\n",
     "        pn.pane.Markdown(\"**Selecione um doador e uma campanha ativa para registrar uma doação**\"),\n",
     "        doadores_select,\n",
     "        campanhas_select,\n",
     "        data_doacao,\n",
-    "        pn.Row(btn_consultar_doacoes, btn_registrar_doacao),\n",
-    "        pn.Row(btn_atualizar_doacao, btn_excluir_doacao),\n",
+    "        pn.Row(btn_consultar, btn_inserir, btn_atualizar, btn_excluir),\n",
     "        pn.Spacer(height=20),\n",
-    "        pn.bind(on_consultar_doacoes, btn_consultar_doacoes),\n",
+    "        pn.bind(on_consultar_doacoes, btn_consultar),\n",
     "        create_btn_voltar(),\n",
     "        sizing_mode='stretch_width',\n",
     "        margin=(20, 20, 20, 20)\n",
@@ -1507,7 +1473,12 @@
     "\n",
     "def go_to_doacoes():\n",
     "    main_area.clear()\n",
-    "    main_area.append(create_doacoes_view())"
+    "    main_area.append(create_doacoes_view())\n",
+    "\n",
+    "btn_consultar.margin = (0, 3, 0, 10)\n",
+    "btn_inserir.margin = (0, 3, 0, 0)\n",
+    "btn_atualizar.margin = (0, 3, 0, 0)\n",
+    "btn_excluir.margin = (0, 3, 0, 0)\n"
    ]
   }
  ],
