- graficos em abas - mais gráficos

--- a/python/CRUD-panel.ipynb
+++ b/python/CRUD-panel.ipynb
@@ -786,20 +786,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "from graficos import create_graficos_view as _create_graficos_view\n",
+    "\n",
     "def create_graficos_view():\n",
-    "    graficos_layout = pn.Column(\n",
-    "        pn.pane.Markdown(\"### 📊 Análise do Sistema de Doações\"),\n",
-    "        create_btn_voltar(),\n",
-    "        pn.Column(grafico_total_usuarios(), sizing_mode='stretch_width'),\n",
-    "        pn.Column(grafico_distribuicao_por_tipo(), sizing_mode='stretch_width'),\n",
-    "        pn.Column(grafico_instituicoes(), sizing_mode='stretch_width'),\n",
-    "        pn.Column(grafico_doacoes_por_campanha(), sizing_mode='stretch_width'),\n",
-    "        create_btn_voltar(),\n",
-    "        sizing_mode='stretch_width',\n",
-    "        margin=(20,20,20,20)\n",
-    "    )\n",
-    "    \n",
-    "    return graficos_layout\n",
+    "    \"\"\"Wrapper que usa o `engine` do notebook e o `create_btn_voltar`.\"\"\"\n",
+    "    try:\n",
+    "        return _create_graficos_view(engine, create_btn_voltar)\n",
+    "    except Exception as e:\n",
+    "        return pn.pane.Alert(f'Erro ao montar view de gráficos: {str(e)}', alert_type='danger')\n",
     "\n",
     "def go_to_graficos():\n",
     "    main_area.clear()\n",
