nomes de botões unicos

--- a/python/CRUD-panel.ipynb
+++ b/python/CRUD-panel.ipynb
@@ -722,16 +722,16 @@
     ")\n",
     "\n",
     "# Botões de ações para campanhas\n",
-    "btn_consultar = pn.widgets.Button(name='Consultar', button_type='primary')\n",
-    "btn_inserir = pn.widgets.Button(name='Inserir', button_type='success')\n",
-    "btn_atualizar = pn.widgets.Button(name='Atualizar', button_type='warning')\n",
-    "btn_excluir = pn.widgets.Button(name='Excluir', button_type='danger')\n",
+    "btn_consultar_campanhas = pn.widgets.Button(name='Consultar', button_type='primary')\n",
+    "btn_inserir_campanhas = pn.widgets.Button(name='Inserir', button_type='success')\n",
+    "btn_atualizar_campanhas = pn.widgets.Button(name='Atualizar', button_type='warning')\n",
+    "btn_excluir_campanhas = pn.widgets.Button(name='Excluir', button_type='danger')\n",
     "btn_ativar_inativar = pn.widgets.Button(name='Ativar/Inativar Campanha', button_type='danger')\n",
     "\n",
-    "btn_consultar.margin = (0, 1, 0, 10)\n",
-    "btn_inserir.margin = (0, 1, 0, 0)\n",
-    "btn_atualizar.margin = (0, 1, 0, 0)\n",
-    "btn_excluir.margin = (0, 1, 0, 0)\n",
+    "btn_consultar_campanhas.margin = (0, 1, 0, 10)\n",
+    "btn_inserir_campanhas.margin = (0, 1, 0, 0)\n",
+    "btn_atualizar_campanhas.margin = (0, 1, 0, 0)\n",
+    "btn_excluir_campanhas.margin = (0, 1, 0, 0)\n",
     "\n",
     "def on_consultar_campanhas(event):\n",
     "    \"\"\"Consulta campanhas com filtro por instituição, nome, datas e status. Se vazio, retorna todas.\"\"\"\n",
@@ -1039,10 +1039,10 @@
     "            cursor.close()\n",
     "        pn.state.notifications.error(f'Erro ao alterar status: {str(e)}')\n",
     "\n",
-    "btn_consultar.on_click(on_consultar_campanhas)\n",
-    "btn_inserir.on_click(on_criar_campanha)\n",
-    "btn_atualizar.on_click(on_atualizar_campanha)\n",
-    "btn_excluir.on_click(on_excluir_campanha)\n",
+    "btn_consultar_campanhas.on_click(on_consultar_campanhas)\n",
+    "btn_inserir_campanhas.on_click(on_criar_campanha)\n",
+    "btn_atualizar_campanhas.on_click(on_atualizar_campanha)\n",
+    "btn_excluir_campanhas.on_click(on_excluir_campanha)\n",
     "btn_ativar_inativar.on_click(on_ativar_inativar)\n",
     "\n",
     "def create_campanhas_view():\n",
@@ -1056,10 +1056,10 @@
     "        data_inicio,\n",
     "        data_fim,\n",
     "        status_campanha,\n",
-    "        pn.Row(btn_consultar, btn_inserir, btn_atualizar, btn_excluir),\n",
+    "        pn.Row(btn_consultar_campanhas, btn_inserir_campanhas, btn_atualizar_campanhas, btn_excluir_campanhas),\n",
     "        pn.Row(btn_ativar_inativar),\n",
     "        pn.Spacer(height=1),\n",
-    "        pn.bind(on_consultar_campanhas, btn_consultar),\n",
+    "        pn.bind(on_consultar_campanhas, btn_consultar_campanhas),\n",
     "        create_btn_voltar(),\n",
     "        sizing_mode='stretch_width',\n",
     "        margin=(20, 20, 20, 20),\n",
@@ -1133,12 +1133,10 @@
     "def create_ordem_widgets():\n",
     "    beneficiarios = get_beneficiarios_list()\n",
     "    instituicoes = get_instituicoes_list()\n",
-    "    doacoes = get_doacoes_list()\n",
     "    return {\n",
     "        \"id_ordem\": pn.widgets.IntInput(name=\"ID da Ordem\", value=0, start=0),\n",
     "        \"cpf_cnpj_b\": pn.widgets.Select(name=\"Beneficiário\", options=beneficiarios, sizing_mode=\"stretch_width\"),\n",
     "        \"cpf_cnpj_i\": pn.widgets.Select(name=\"Instituição\", options=instituicoes, sizing_mode=\"stretch_width\"),\n",
-    "        \"id_doacao\": pn.widgets.Select(name=\"Doação\", options=doacoes, sizing_mode=\"stretch_width\"),\n",
     "        \"status_ordem\": pn.widgets.Select(name=\"Status\", options=[\"Pendente\", \"Em Processamento\", \"Concluída\", \"Cancelada\"]),\n",
     "        \"data_hora_criacao\": pn.widgets.DatetimePicker(name=\"Data/Hora de Criação\"),\n",
     "        \"data_hora_retirada\": pn.widgets.DatetimePicker(name=\"Data/Hora de Retirada\"),\n",
@@ -1166,13 +1164,16 @@
     "        query = \"\"\"\n",
     "        SELECT o.id_ordem_doacao, u_b.nome AS beneficiario, u_i.nome AS instituicao, o.status, \n",
     "               o.data_hora_criacao, o.data_hora_retirada, o.rua, o.numero, o.bairro, o.cidade, o.estado, o.cep,\n",
-    "               COALESCE(i.id_doacao, 0) AS id_doacao\n",
+    "               STRING_AGG(DISTINCT i.id_doacao::text, ', ') AS doacoes_associadas\n",
     "        FROM ordem_de_doacao o\n",
     "        LEFT JOIN beneficiario b ON o.cpf_cnpj_b = b.cpf_cnpj_b\n",
     "        LEFT JOIN usuario u_b ON b.cpf_cnpj_b = u_b.cpf_cnpj\n",
     "        LEFT JOIN instituicao inst ON o.cpf_cnpj_i = inst.cpf_cnpj_i\n",
     "        LEFT JOIN usuario u_i ON inst.cpf_cnpj_i = u_i.cpf_cnpj\n",
     "        LEFT JOIN item_doacao i ON o.id_ordem_doacao = i.id_ordem_doacao\n",
+    "        GROUP BY o.id_ordem_doacao, u_b.nome, u_i.nome, o.status, \n",
+    "                 o.data_hora_criacao, o.data_hora_retirada, o.rua, o.numero, \n",
+    "                 o.bairro, o.cidade, o.estado, o.cep\n",
     "        ORDER BY o.data_hora_criacao DESC\n",
     "        \"\"\"\n",
     "        df = pd.read_sql_query(query, engine)\n",
@@ -1187,13 +1188,16 @@
     "        query = \"\"\"\n",
     "        SELECT o.id_ordem_doacao, u_b.nome AS beneficiario, u_i.nome AS instituicao, o.status, \n",
     "               o.data_hora_criacao, o.data_hora_retirada, o.rua, o.numero, o.bairro, o.cidade, o.estado, o.cep,\n",
-    "               COALESCE(i.id_doacao, 0) AS id_doacao\n",
+    "               STRING_AGG(DISTINCT i.id_doacao::text, ', ') AS doacoes_associadas\n",
     "        FROM ordem_de_doacao o\n",
     "        LEFT JOIN beneficiario b ON o.cpf_cnpj_b = b.cpf_cnpj_b\n",
     "        LEFT JOIN usuario u_b ON b.cpf_cnpj_b = u_b.cpf_cnpj\n",
     "        LEFT JOIN instituicao inst ON o.cpf_cnpj_i = inst.cpf_cnpj_i\n",
     "        LEFT JOIN usuario u_i ON inst.cpf_cnpj_i = u_i.cpf_cnpj\n",
     "        LEFT JOIN item_doacao i ON o.id_ordem_doacao = i.id_ordem_doacao\n",
+    "        GROUP BY o.id_ordem_doacao, u_b.nome, u_i.nome, o.status, \n",
+    "                 o.data_hora_criacao, o.data_hora_retirada, o.rua, o.numero, \n",
+    "                 o.bairro, o.cidade, o.estado, o.cep\n",
     "        ORDER BY o.data_hora_criacao DESC\n",
     "        \"\"\"\n",
     "        df = pd.read_sql_query(query, engine)\n",
@@ -1219,7 +1223,7 @@
     "        )\n",
     "        con.commit()\n",
     "        cursor.close()\n",
-    "        pn.state.notifications.success('Ordem inserida com sucesso!')\n",
+    "        pn.state.notifications.success('Ordem inserida com sucesso! Use a tela de Itens para associar doações.')\n",
     "        return query_all_ordens()\n",
     "    except Exception as e:\n",
     "        con.rollback()\n",
@@ -1304,7 +1308,6 @@
     "            w[\"id_ordem\"],\n",
     "            w[\"cpf_cnpj_b\"],\n",
     "            w[\"cpf_cnpj_i\"],\n",
-    "            w[\"id_doacao\"],\n",
     "            w[\"status_ordem\"],\n",
     "            w[\"data_hora_criacao\"],\n",
     "            w[\"data_hora_retirada\"],\n",
@@ -1330,11 +1333,31 @@
     "\n",
     "# ===== TELA DE ITENS DE DOAÇÃO =====\n",
     "\n",
+    "def get_ordens_list():\n",
+    "    \"\"\"Busca todas as ordens de doação disponíveis\"\"\"\n",
+    "    try:\n",
+    "        query = \"\"\"\n",
+    "        SELECT DISTINCT o.id_ordem_doacao, \n",
+    "               CONCAT(o.id_ordem_doacao, ' - ', u.nome, ' (', o.status, ')')\n",
+    "        FROM ordem_de_doacao o\n",
+    "        LEFT JOIN beneficiario b ON o.cpf_cnpj_b = b.cpf_cnpj_b\n",
+    "        LEFT JOIN usuario u ON b.cpf_cnpj_b = u.cpf_cnpj\n",
+    "        ORDER BY o.id_ordem_doacao DESC\n",
+    "        \"\"\"\n",
+    "        df = pd.read_sql_query(query, engine)\n",
+    "        if df.empty:\n",
+    "            return {}\n",
+    "        return dict(zip(df.iloc[:, 1], df.iloc[:, 0]))\n",
+    "    except:\n",
+    "        return {}\n",
+    "\n",
     "def create_itens_widgets():\n",
     "    doacoes = get_doacoes_list()\n",
+    "    ordens = get_ordens_list()\n",
     "    return {\n",
     "        \"id_item\": pn.widgets.IntInput(name=\"ID do Item\", value=0, start=0),\n",
-    "        \"id_doacao\": pn.widgets.Select(name=\"Doação\", options=doacoes, sizing_mode=\"stretch_width\"),\n",
+    "        \"id_doacao\": pn.widgets.Select(name=\"Doação (obrigatório)\", options=doacoes, sizing_mode=\"stretch_width\"),\n",
+    "        \"id_ordem_doacao\": pn.widgets.Select(name=\"Ordem de Doação (opcional)\", options=ordens, sizing_mode=\"stretch_width\"),\n",
     "        \"nome\": pn.widgets.TextInput(name=\"Nome\", placeholder=\"Nome do item\", sizing_mode=\"stretch_width\"),\n",
     "        \"descricao\": pn.widgets.TextInput(name=\"Descrição\", placeholder=\"Descrição\", sizing_mode=\"stretch_width\"),\n",
     "        \"estado_conservacao\": pn.widgets.Select(name=\"Estado\", options=[\"Novo\", \"Bom\", \"Regular\", \"Ruim\"]),\n",
@@ -1359,8 +1382,10 @@
     "    try:\n",
     "        query = \"\"\"\n",
     "        SELECT i.id_item, i.id_doacao, i.nome, i.descricao, i.estado_conservacao, \n",
-    "               i.peso, i.volume, i.tamanho, i.cor\n",
+    "               i.peso, i.volume, i.tamanho, i.cor,\n",
+    "               COALESCE(iod.id_ordem_doacao::text, 'Sem ordem') AS ordem_associada\n",
     "        FROM item_doacao i\n",
+    "        LEFT JOIN item_ordem_doacao iod ON i.id_item = iod.id_item\n",
     "        ORDER BY i.id_doacao DESC\n",
     "        \"\"\"\n",
     "        df = pd.read_sql_query(query, engine)\n",
@@ -1374,16 +1399,20 @@
     "        if id_item == 0:\n",
     "            query = \"\"\"\n",
     "            SELECT i.id_item, i.id_doacao, i.nome, i.descricao, i.estado_conservacao, \n",
-    "                   i.peso, i.volume, i.tamanho, i.cor\n",
+    "                   i.peso, i.volume, i.tamanho, i.cor,\n",
+    "                   COALESCE(iod.id_ordem_doacao::text, 'Sem ordem') AS ordem_associada\n",
     "            FROM item_doacao i\n",
+    "            LEFT JOIN item_ordem_doacao iod ON i.id_item = iod.id_item\n",
     "            ORDER BY i.id_doacao DESC\n",
     "            \"\"\"\n",
     "            df = pd.read_sql_query(query, engine)\n",
     "        else:\n",
     "            query = \"\"\"\n",
     "            SELECT i.id_item, i.id_doacao, i.nome, i.descricao, i.estado_conservacao, \n",
-    "                   i.peso, i.volume, i.tamanho, i.cor\n",
+    "                   i.peso, i.volume, i.tamanho, i.cor,\n",
+    "                   COALESCE(iod.id_ordem_doacao::text, 'Sem ordem') AS ordem_associada\n",
     "            FROM item_doacao i\n",
+    "            LEFT JOIN item_ordem_doacao iod ON i.id_item = iod.id_item\n",
     "            WHERE i.id_item=%s\n",
     "            \"\"\"\n",
     "            df = pd.read_sql_query(query, engine, params=(id_item,))\n",
@@ -1408,8 +1437,25 @@
     "             w[\"peso\"].value, w[\"volume\"].value, w[\"tamanho\"].value, w[\"cor\"].value)\n",
     "        )\n",
     "        con.commit()\n",
+    "        \n",
+    "        # Se uma ordem foi selecionada, criar a ligação\n",
+    "        if w[\"id_ordem_doacao\"].value:\n",
+    "            cursor.execute(\n",
+    "                \"SELECT id_item FROM item_doacao ORDER BY id_item DESC LIMIT 1\"\n",
+    "            )\n",
+    "            id_item_novo = cursor.fetchone()[0]\n",
+    "            \n",
+    "            cursor.execute(\n",
+    "                \"\"\"INSERT INTO item_ordem_doacao(id_item, id_ordem_doacao) \n",
+    "                   VALUES (%s, %s)\"\"\",\n",
+    "                (id_item_novo, w[\"id_ordem_doacao\"].value)\n",
+    "            )\n",
+    "            con.commit()\n",
+    "            pn.state.notifications.success('Item inserido e vinculado à ordem!')\n",
+    "        else:\n",
+    "            pn.state.notifications.success('Item inserido com sucesso!')\n",
+    "        \n",
     "        cursor.close()\n",
-    "        pn.state.notifications.success('Item inserido com sucesso!')\n",
     "        return query_all_itens()\n",
     "    except Exception as e:\n",
     "        con.rollback()\n",
@@ -1431,8 +1477,33 @@
     "             w[\"peso\"].value, w[\"volume\"].value, w[\"tamanho\"].value, w[\"cor\"].value, w[\"id_item\"].value)\n",
     "        )\n",
     "        con.commit()\n",
+    "        \n",
+    "        # Se uma ordem foi selecionada, atualizar a ligação\n",
+    "        if w[\"id_ordem_doacao\"].value:\n",
+    "            # Remover ligação anterior\n",
+    "            cursor.execute(\n",
+    "                \"DELETE FROM item_ordem_doacao WHERE id_item=%s\",\n",
+    "                (w[\"id_item\"].value,)\n",
+    "            )\n",
+    "            # Criar nova ligação\n",
+    "            cursor.execute(\n",
+    "                \"\"\"INSERT INTO item_ordem_doacao(id_item, id_ordem_doacao) \n",
+    "                   VALUES (%s, %s) \n",
+    "                   ON CONFLICT (id_item, id_ordem_doacao) DO NOTHING\"\"\",\n",
+    "                (w[\"id_item\"].value, w[\"id_ordem_doacao\"].value)\n",
+    "            )\n",
+    "            con.commit()\n",
+    "            pn.state.notifications.success('Item atualizado e vinculado à ordem!')\n",
+    "        else:\n",
+    "            # Remover ligação se nenhuma ordem foi selecionada\n",
+    "            cursor.execute(\n",
+    "                \"DELETE FROM item_ordem_doacao WHERE id_item=%s\",\n",
+    "                (w[\"id_item\"].value,)\n",
+    "            )\n",
+    "            con.commit()\n",
+    "            pn.state.notifications.success('Item atualizado!')\n",
+    "        \n",
     "        cursor.close()\n",
-    "        pn.state.notifications.success('Item atualizado com sucesso!')\n",
     "        return query_all_itens()\n",
     "    except Exception as e:\n",
     "        con.rollback()\n",
@@ -1475,6 +1546,7 @@
     "            create_btn_voltar(),\n",
     "            w[\"id_item\"],\n",
     "            w[\"id_doacao\"],\n",
+    "            w[\"id_ordem_doacao\"],\n",
     "            w[\"nome\"],\n",
     "            w[\"descricao\"],\n",
     "            w[\"estado_conservacao\"],\n",
@@ -1561,10 +1633,10 @@
     ")\n",
     "\n",
     "# Botões de ações para doações\n",
-    "btn_consultar = pn.widgets.Button(name='Consultar', button_type='primary')\n",
-    "btn_registrar = pn.widgets.Button(name='Inserir', button_type='success')\n",
-    "btn_atualizar = pn.widgets.Button(name='Atualizar', button_type='warning')\n",
-    "btn_excluir = pn.widgets.Button(name='Excluir', button_type='danger')\n",
+    "btn_consultar_doacoes = pn.widgets.Button(name='Consultar', button_type='primary')\n",
+    "btn_registrar_doacoes = pn.widgets.Button(name='Inserir', button_type='success')\n",
+    "btn_atualizar_doacoes = pn.widgets.Button(name='Atualizar', button_type='warning')\n",
+    "btn_excluir_doacoes = pn.widgets.Button(name='Excluir', button_type='danger')\n",
     "\n",
     "def on_consultar_doacoes(event):\n",
     "    \"\"\"Consulta todas as doações registradas\"\"\"\n",
@@ -1713,10 +1785,10 @@
     "            cursor.close()\n",
     "        pn.state.notifications.error(f'Erro ao excluir: {str(e)}')\n",
     "\n",
-    "btn_consultar.on_click(on_consultar_doacoes)\n",
-    "btn_inserir.on_click(on_registrar_doacao)\n",
-    "btn_atualizar.on_click(on_atualizar_doacao)\n",
-    "btn_excluir.on_click(on_excluir_doacao)\n",
+    "btn_consultar_doacoes.on_click(on_consultar_doacoes)\n",
+    "btn_registrar_doacoes.on_click(on_registrar_doacao)\n",
+    "btn_atualizar_doacoes.on_click(on_atualizar_doacao)\n",
+    "btn_excluir_doacoes.on_click(on_excluir_doacao)\n",
     "\n",
     "def create_doacoes_view():\n",
     "    \"\"\"Cria a tela de doações\"\"\"\n",
@@ -1727,9 +1799,9 @@
     "        doadores_select,\n",
     "        campanhas_select,\n",
     "        data_doacao,\n",
-    "        pn.Row(btn_consultar, btn_inserir, btn_atualizar, btn_excluir),\n",
+    "        pn.Row(btn_consultar_doacoes, btn_registrar_doacoes, btn_atualizar_doacoes, btn_excluir_doacoes),\n",
     "        pn.Spacer(height=20),\n",
-    "        pn.bind(on_consultar_doacoes, btn_consultar),\n",
+    "        pn.bind(on_consultar_doacoes, btn_consultar_doacoes),\n",
     "        create_btn_voltar(),\n",
     "        sizing_mode='stretch_width',\n",
     "        margin=(20, 20, 20, 20)\n",
@@ -1740,10 +1812,10 @@
     "    main_area.clear()\n",
     "    main_area.append(create_doacoes_view())\n",
     "\n",
-    "btn_consultar.margin = (0, 3, 0, 10)\n",
-    "btn_inserir.margin = (0, 3, 0, 0)\n",
-    "btn_atualizar.margin = (0, 3, 0, 0)\n",
-    "btn_excluir.margin = (0, 3, 0, 0)\n"
+    "btn_consultar_doacoes.margin = (0, 3, 0, 10)\n",
+    "btn_registrar_doacoes.margin = (0, 3, 0, 0)\n",
+    "btn_atualizar_doacoes.margin = (0, 3, 0, 0)\n",
+    "btn_excluir_doacoes.margin = (0, 3, 0, 0)\n"
    ]
   }
  ],
